Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.8.0
-
None
-
-
665acc02c (dev), a1a872e2d (6.9)
Description
Test Code:
Steps to reproduce:
1. Compile the code above with Qt 6.8.0 wasm_singlethread or wasm_multithread
2. Open the app in browser with http or https,then Select some text in QTextEdit
3. Press (not click,no mouse up,no move,no drag) selected text,then browser blocked,and after a while the OS crash with out of memory;(try step 3 repeatedly if no obvious block)
Warning in browser dev tool:
QEventLoop::WaitForMoreEvents is not supported on the main thread without asyncify
emscriptenLog @ app.js:8
_emscripten_log @ app.js:8
invoke_viii @ app.js:8
$func13686 @ app.wasm:0x7c279a
invoke_vii @ app.js:8
$func13428 @ app.wasm:0x79898b
invoke_viii @ app.js:8
$func7888 @ app.wasm:0x48d4d9
invoke_viii @ app.js:8
$func3734 @ app.wasm:0x1c7fb2
$func466 @ app.wasm:0x111d1
$func14184 @ app.wasm:0x7e2db7
invoke_iii @ app.js:8
$func2732 @ app.wasm:0x13340a
$func9072 @ app.wasm:0x5b263d
$func19794 @ app.wasm:0xa5333f
$func9085 @ app.wasm:0x5b360a
$func2652 @ app.wasm:0x1299c7
$func5216 @ app.wasm:0x2cde3d
$func11963 @ app.wasm:0x7341ac
$func1005 @ app.wasm:0x44c3c
$func7126 @ app.wasm:0x430e61
$func973 @ app.wasm:0x3f9f9
$func2328 @ app.wasm:0xfedf3
$func4287 @ app.wasm:0x220b9a
$func13582 @ app.wasm:0x7ad3de
$func6847 @ app.wasm:0x40d14b
$func1548 @ app.wasm:0x8af61
$func14076 @ app.wasm:0x7dcc87
invoke_iiii @ app.js:8
$func4135 @ app.wasm:0x210f78
$func725 @ app.wasm:0x294c1
$func4369 @ app.wasm:0x233a86
$func13842 @ app.wasm:0x7cd58b
$func1548 @ app.wasm:0x8af72
$func14076 @ app.wasm:0x7de65e
invoke_iiii @ app.js:8
$func4135 @ app.wasm:0x210f78
$func725 @ app.wasm:0x294c1
$func3421 @ app.wasm:0x18cb58
$func1407 @ app.wasm:0x73b3e
$func9710 @ app.wasm:0x646d91
$func9709 @ app.wasm:0x646a23
$func19928 @ app.wasm:0xa5becd
invoke_vii @ app.js:8
$func14212 @ app.wasm:0x7e4b1a
invoke_vii @ app.js:8
$func14211 @ app.wasm:0x7e49e1
QtEventListener.handleEvent @ VM15:9
08:37:49.995
App capture:
Attachments
For Gerrit Dashboard: QTBUG-131256 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
606102,2 | wasm: make the asyncify warnings be errors | dev | qt/qtbase | Status: NEW | +2 | 0 |
629036,1 | wasm: disable text drag for text edits | 6.8 | qt/qtbase | Status: NEW | +2 | 0 |
606108,6 | wasm: disable text drag for text edits | dev | qt/qtbase | Status: MERGED | +2 | 0 |
628997,2 | wasm: disable text drag for text edits | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |