wasm: disable text drag for text edits

Disable text drag if asyncify is not enabled.

Fixes: QTBUG-131256
Change-Id: I6589f11dda42c2f41db610e7cfece8a3db6573db
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>
(cherry picked from commit 665acc02cf106071d57d012bb68250c2ea5d0a2c)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit a1a872e2d2eddbbca06224911f198db5f3e84cda)